change cache sterategy